<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="viewModel"
            type="cz.utb.fai.ceskapostaapi.ui.ParcelDetailViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.ParcelDetailFragment">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/id"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/parcelId"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:textSize="20sp"
                android:text="@{viewModel.parcelRecord.id}" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="20dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/parcelType"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/parcelType"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:textSize="20sp"
                android:text="@{viewModel.parcelRecord.parcelType}" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="20dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/parcelWeight"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:textSize="20sp"
                android:text="@{Double.valueOf(viewModel.parcelRecord.weight).toString()}" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="20dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/cod"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/parcelCod"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:textSize="20sp"
                android:text="@{Double.valueOf(viewModel.parcelRecord.cod).toString()}" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/storageLength"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/parcelStorageLength"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:textSize="20sp"
                android:text="@{Integer.valueOf(viewModel.parcelRecord.storageLength).toString()}" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/parcel_states"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/state_item" />
    </LinearLayout>
</layout>